Fix sonar issue: replace URL with URI see https://sonarcloud.io/organizations/rmzzz/rules?open=java%3AS2112&rule_key=java%3AS2112